# hugobloxorcid

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  monthly-orcid-sync.yml  publish.yml
examples/hugo-site-overrides/: README.md
examples/hugo-site-overrides/layouts/_partials/: page_metadata_authors_apa.html
examples/hugo-site-overrides/layouts/_partials/functions/: publication_apa.html
examples/hugo-site-overrides/layouts/_partials/views/: citation.html
examples/hugo-site-overrides/layouts/publications/: single.html
scripts/: orcid_import.py
src/hugobloxorcid/: __init__.py  cli.py
tests/: test_cli.py
