[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hugobloxorcid"
version = "0.2.0"
description = "Import ORCID publications into HugoBlox/Hugo publication bundles with DOI enrichment, PDF fetching, and cover generation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Marco Kalz" }
]
keywords = ["orcid", "hugoblox", "hugo", "publications", "academic-websites"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
  "Pillow>=10.0"
]

[project.optional-dependencies]
pdf = ["PyMuPDF>=1.23"]

[project.urls]
Homepage = "https://github.com/mkalz/hugobloxorcid"
Repository = "https://github.com/mkalz/hugobloxorcid"
Issues = "https://github.com/mkalz/hugobloxorcid/issues"

[project.scripts]
hugoblox-orcid-import = "hugobloxorcid.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
